@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2017, 2019 IBM Corp. and others
+ * Copyright (c) 2017, 2020 IBM Corp. and others
  *
  * This program and the accompanying materials are made available under
  * the terms of the Eclipse Public License 2.0 which accompanies this
@@ -406,7 +406,7 @@ public class monTests {
 
 class A {
    public A() {
-      intValue = new Integer(6023);
+      intValue = Integer.valueOf(6023);
       lock = new Object();
    }
 
