@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2017, 2018 IBM Corp. and others
+ * Copyright (c) 2017, 2020 IBM Corp. and others
  *
  * This program and the accompanying materials are made available under
  * the terms of the Eclipse Public License 2.0 which accompanies this
@@ -96,7 +96,7 @@ public class MutateSplitTableRetransformationTest {
 
 			characteristics.clear();
 			characteristics.put(ClassGenerator.VERSION, classVersion);
-			characteristics.put(ClassGenerator.IMPLEMENTS_INTERFACE, new Boolean(true));
+			characteristics.put(ClassGenerator.IMPLEMENTS_INTERFACE, Boolean.valueOf(true));
 			/*
 			 * Generate shared invokers based on invokers encoded in class
 			 * version
